--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
 <link rel="stylesheet" href="style.css">
 <title>石榴熟了</title>
+<style>
+div.gif {
+    height: 158px;
+    width: 255px;
+    background-size: cover;
+}
+</style>
 </head>
 <body>
 <div class="top">
@@ -30,6 +37,7 @@
         <div class="banner">
 
         </div>
+        <!--
         <div class="video">
             <div class="video_list">
                 <div class="head">
@@ -244,6 +252,237 @@
                     <li>
                         <div class="humbnail">
                             <img src="humbnail.png" alt="humbnail" width="255" height="158">
+                            <div class="play">
+                                <div class="icon"></div>
+                                <div class="duration">14:25</div>
+                            </div>
+                        </div>
+                        <div class="meta">
+                            <div class="title">第三季 第9集</div>
+                            <div class="info">
+                                <span class="publish_date">2017.04.27</span>
+                                <span class="count">100万次播放</span>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        -->
+        <div class="video">
+            <div class="video_list">
+                <div class="head">
+                    <h1>石榴熟了</h1>
+                    <ul class="season">
+                        <li class="active"><a href="#">第三季</a></li>
+                        <li><a href="#">第二季</a></li>
+                        <li><a href="#">第一季</a></li>
+                    </ul>
+                </div>
+                <ul class="video">
+                    <li>
+                        <div class="humbnail">
+                            <div class="gif" style="background-image: url(gif/1.gif)"></div>
+                            <div class="play">
+                                <div class="icon"></div>
+                                <div class="duration">14:25</div>
+                            </div>
+                        </div>
+                        <div class="meta">
+                            <div class="title">第三季 第12集</div>
+                            <div class="info">
+                                <span class="publish_date">2017.04.27</span>
+                                <span class="count">100万次播放</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="humbnail">
+                            <div class="gif" style="background-image: url(gif/2.gif)"></div>
+                            <div class="play">
+                                <div class="icon"></div>
+                                <div class="duration">14:25</div>
+                            </div>
+                        </div>
+                        <div class="meta">
+                            <div class="title">第三季 第11集</div>
+                            <div class="info">
+                                <span class="publish_date">2017.04.27</span>
+                                <span class="count">100万次播放</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="humbnail">
+                            <div class="gif" style="background-image: url(gif/3.gif)"></div>
+                            <div class="play">
+                                <div class="icon"></div>
+                                <div class="duration">14:25</div>
+                            </div>
+                        </div>
+                        <div class="meta">
+                            <div class="title">第三季 第10集</div>
+                            <div class="info">
+                                <span class="publish_date">2017.04.27</span>
+                                <span class="count">100万次播放</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="humbnail">
+                            <div class="gif" style="background-image: url(gif/13.gif)"></div>
+                            <div class="play">
+                                <div class="icon"></div>
+                                <div class="duration">14:25</div>
+                            </div>
+                        </div>
+                        <div class="meta">
+                            <div class="title">第三季 第9集</div>
+                            <div class="info">
+                                <span class="publish_date">2017.04.27</span>
+                                <span class="count">100万次播放</span>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="video_list">
+                <div class="head">
+                    <h1>奇葩古丽</h1>
+                    <ul class="season">
+                        <li class="active"><a href="#">第三季</a></li>
+                        <li><a href="#">第二季</a></li>
+                        <li><a href="#">第一季</a></li>
+                    </ul>
+                </div>
+                <ul class="video">
+                    <li>
+                        <div class="humbnail">
+                            <div class="gif" style="background-image: url(gif/5.gif)"></div>
+                            <div class="play">
+                                <div class="icon"></div>
+                                <div class="duration">14:25</div>
+                            </div>
+                        </div>
+                        <div class="meta">
+                            <div class="title">第三季 第12集</div>
+                            <div class="info">
+                                <span class="publish_date">2017.04.27</span>
+                                <span class="count">100万次播放</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="humbnail">
+                            <div class="gif" style="background-image: url(gif/6.gif)"></div>
+                            <div class="play">
+                                <div class="icon"></div>
+                                <div class="duration">14:25</div>
+                            </div>
+                        </div>
+                        <div class="meta">
+                            <div class="title">第三季 第11集</div>
+                            <div class="info">
+                                <span class="publish_date">2017.04.27</span>
+                                <span class="count">100万次播放</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="humbnail">
+                            <div class="gif" style="background-image: url(gif/14.gif)"></div>
+                            <div class="play">
+                                <div class="icon"></div>
+                                <div class="duration">14:25</div>
+                            </div>
+                        </div>
+                        <div class="meta">
+                            <div class="title">第三季 第10集</div>
+                            <div class="info">
+                                <span class="publish_date">2017.04.27</span>
+                                <span class="count">100万次播放</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="humbnail">
+                            <div class="gif" style="background-image: url(gif/8.gif)"></div>
+                            <div class="play">
+                                <div class="icon"></div>
+                                <div class="duration">14:25</div>
+                            </div>
+                        </div>
+                        <div class="meta">
+                            <div class="title">第三季 第9集</div>
+                            <div class="info">
+                                <span class="publish_date">2017.04.27</span>
+                                <span class="count">100万次播放</span>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="video_list">
+                <div class="head">
+                    <h1>奇葩吐槽</h1>
+                    <ul class="season">
+                        <li class="active"><a href="#">第三季</a></li>
+                        <li><a href="#">第二季</a></li>
+                        <li><a href="#">第一季</a></li>
+                    </ul>
+                </div>
+                <ul class="video">
+                    <li>
+                        <div class="humbnail">
+                            <div class="gif" style="background-image: url(gif/9.gif)"></div>
+                            <div class="play">
+                                <div class="icon"></div>
+                                <div class="duration">14:25</div>
+                            </div>
+                        </div>
+                        <div class="meta">
+                            <div class="title">第三季 第12集</div>
+                            <div class="info">
+                                <span class="publish_date">2017.04.27</span>
+                                <span class="count">100万次播放</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="humbnail">
+                            <div class="gif" style="background-image: url(gif/10.gif)"></div>
+                            <div class="play">
+                                <div class="icon"></div>
+                                <div class="duration">14:25</div>
+                            </div>
+                        </div>
+                        <div class="meta">
+                            <div class="title">第三季 第11集</div>
+                            <div class="info">
+                                <span class="publish_date">2017.04.27</span>
+                                <span class="count">100万次播放</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="humbnail">
+                            <div class="gif" style="background-image: url(gif/11.gif)"></div>
+                            <div class="play">
+                                <div class="icon"></div>
+                                <div class="duration">14:25</div>
+                            </div>
+                        </div>
+                        <div class="meta">
+                            <div class="title">第三季 第10集</div>
+                            <div class="info">
+                                <span class="publish_date">2017.04.27</span>
+                                <span class="count">100万次播放</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="humbnail">
+                            <div class="gif" style="background-image: url(gif/12.gif)"></div>
                             <div class="play">
                                 <div class="icon"></div>
                                 <div class="duration">14:25</div>
