--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <!doctype html>
 <html>
-<head>
+<head lang="zh-cn">
+<meta charset="utf-8">
 <link rel="stylesheet" href="style.css">
 <title>石榴熟了</title>
-<style>
-div.gif {
-    height: 158px;
-    width: 255px;
-    background-size: cover;
-}
-</style>
 </head>
 <body>
 <div class="top">
@@ -24,7 +18,7 @@ div.gif {
 <nav>
     <div class="inner">
         <ul>
-            <li><a href="#">视频</a></li>
+            <li class="active"><a href="#">视频</a></li>
             <li><a href="#">文章</a></li>
             <li><a href="#">我们</a></li>
         </ul>
@@ -37,7 +31,6 @@ div.gif {
         <div class="banner">
 
         </div>
-        <!--
         <div class="video">
             <div class="video_list">
                 <div class="head">
@@ -47,11 +40,13 @@ div.gif {
                         <li><a href="#">第二季</a></li>
                         <li><a href="#">第一季</a></li>
                     </ul>
+                    <a href="#" class="more">更多</a>
                 </div>
                 <ul class="video">
                     <li>
-                        <div class="humbnail">
-                            <img src="humbnail.png" alt="humbnail" width="255" height="158">
+                        <div class="thumbnail">
+                            <img src="thumbnail2.png" alt="thumbnail" width="255" height="158">
+                            <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
                                 <div class="duration">14:25</div>
@@ -66,8 +61,9 @@ div.gif {
                         </div>
                     </li>
                     <li>
-                        <div class="humbnail">
-                            <img src="humbnail.png" alt="humbnail" width="255" height="158">
+                        <div class="thumbnail">
+                            <img src="thumbnail.png" alt="thumbnail" width="255" height="158">
+                            <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
                                 <div class="duration">14:25</div>
@@ -82,8 +78,9 @@ div.gif {
                         </div>
                     </li>
                     <li>
-                        <div class="humbnail">
-                            <img src="humbnail.png" alt="humbnail" width="255" height="158">
+                        <div class="thumbnail">
+                            <img src="thumbnail.png" alt="thumbnail" width="255" height="158">
+                            <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
                                 <div class="duration">14:25</div>
@@ -98,8 +95,9 @@ div.gif {
                         </div>
                     </li>
                     <li>
-                        <div class="humbnail">
-                            <img src="humbnail.png" alt="humbnail" width="255" height="158">
+                        <div class="thumbnail">
+                            <img src="thumbnail.png" alt="thumbnail" width="255" height="158">
+                            <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
                                 <div class="duration">14:25</div>
@@ -123,11 +121,13 @@ div.gif {
                         <li><a href="#">第二季</a></li>
                         <li><a href="#">第一季</a></li>
                     </ul>
+                    <a href="#" class="more">更多</a>
                 </div>
                 <ul class="video">
                     <li>
-                        <div class="humbnail">
-                            <img src="humbnail.png" alt="humbnail" width="255" height="158">
+                        <div class="thumbnail">
+                            <img src="thumbnail.png" alt="thumbnail" width="255" height="158">
+                            <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
                                 <div class="duration">14:25</div>
@@ -142,8 +142,9 @@ div.gif {
                         </div>
                     </li>
                     <li>
-                        <div class="humbnail">
-                            <img src="humbnail.png" alt="humbnail" width="255" height="158">
+                        <div class="thumbnail">
+                            <img src="thumbnail.png" alt="thumbnail" width="255" height="158">
+                            <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
                                 <div class="duration">14:25</div>
@@ -158,8 +159,9 @@ div.gif {
                         </div>
                     </li>
                     <li>
-                        <div class="humbnail">
-                            <img src="humbnail.png" alt="humbnail" width="255" height="158">
+                        <div class="thumbnail">
+                            <img src="thumbnail.png" alt="thumbnail" width="255" height="158">
+                            <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
                                 <div class="duration">14:25</div>
@@ -174,8 +176,9 @@ div.gif {
                         </div>
                     </li>
                     <li>
-                        <div class="humbnail">
-                            <img src="humbnail.png" alt="humbnail" width="255" height="158">
+                        <div class="thumbnail">
+                            <img src="thumbnail.png" alt="thumbnail" width="255" height="158">
+                            <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
                                 <div class="duration">14:25</div>
@@ -199,11 +202,13 @@ div.gif {
                         <li><a href="#">第二季</a></li>
                         <li><a href="#">第一季</a></li>
                     </ul>
+                    <a href="#" class="more">更多</a>
                 </div>
                 <ul class="video">
                     <li>
-                        <div class="humbnail">
-                            <img src="humbnail.png" alt="humbnail" width="255" height="158">
+                        <div class="thumbnail">
+                            <img src="thumbnail.png" alt="thumbnail" width="255" height="158">
+                            <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
                                 <div class="duration">14:25</div>
@@ -218,8 +223,9 @@ div.gif {
                         </div>
                     </li>
                     <li>
-                        <div class="humbnail">
-                            <img src="humbnail.png" alt="humbnail" width="255" height="158">
+                        <div class="thumbnail">
+                            <img src="thumbnail.png" alt="thumbnail" width="255" height="158">
+                            <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
                                 <div class="duration">14:25</div>
@@ -234,8 +240,9 @@ div.gif {
                         </div>
                     </li>
                     <li>
-                        <div class="humbnail">
-                            <img src="humbnail.png" alt="humbnail" width="255" height="158">
+                        <div class="thumbnail">
+                            <img src="thumbnail.png" alt="thumbnail" width="255" height="158">
+                            <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
                                 <div class="duration">14:25</div>
@@ -250,239 +257,9 @@ div.gif {
                         </div>
                     </li>
                     <li>
-                        <div class="humbnail">
-                            <img src="humbnail.png" alt="humbnail" width="255" height="158">
-                            <div class="play">
-                                <div class="icon"></div>
-                                <div class="duration">14:25</div>
-                            </div>
-                        </div>
-                        <div class="meta">
-                            <div class="title">第三季 第9集</div>
-                            <div class="info">
-                                <span class="publish_date">2017.04.27</span>
-                                <span class="count">100万次播放</span>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        -->
-        <div class="video">
-            <div class="video_list">
-                <div class="head">
-                    <h1>石榴熟了</h1>
-                    <ul class="season">
-                        <li class="active"><a href="#">第三季</a></li>
-                        <li><a href="#">第二季</a></li>
-                        <li><a href="#">第一季</a></li>
-                    </ul>
-                </div>
-                <ul class="video">
-                    <li>
-                        <div class="humbnail">
-                            <div class="gif" style="background-image: url(gif/1.gif)"></div>
-                            <div class="play">
-                                <div class="icon"></div>
-                                <div class="duration">14:25</div>
-                            </div>
-                        </div>
-                        <div class="meta">
-                            <div class="title">第三季 第12集</div>
-                            <div class="info">
-                                <span class="publish_date">2017.04.27</span>
-                                <span class="count">100万次播放</span>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="humbnail">
-                            <div class="gif" style="background-image: url(gif/2.gif)"></div>
-                            <div class="play">
-                                <div class="icon"></div>
-                                <div class="duration">14:25</div>
-                            </div>
-                        </div>
-                        <div class="meta">
-                            <div class="title">第三季 第11集</div>
-                            <div class="info">
-                                <span class="publish_date">2017.04.27</span>
-                                <span class="count">100万次播放</span>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="humbnail">
-                            <div class="gif" style="background-image: url(gif/3.gif)"></div>
-                            <div class="play">
-                                <div class="icon"></div>
-                                <div class="duration">14:25</div>
-                            </div>
-                        </div>
-                        <div class="meta">
-                            <div class="title">第三季 第10集</div>
-                            <div class="info">
-                                <span class="publish_date">2017.04.27</span>
-                                <span class="count">100万次播放</span>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="humbnail">
-                            <div class="gif" style="background-image: url(gif/13.gif)"></div>
-                            <div class="play">
-                                <div class="icon"></div>
-                                <div class="duration">14:25</div>
-                            </div>
-                        </div>
-                        <div class="meta">
-                            <div class="title">第三季 第9集</div>
-                            <div class="info">
-                                <span class="publish_date">2017.04.27</span>
-                                <span class="count">100万次播放</span>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="video_list">
-                <div class="head">
-                    <h1>奇葩古丽</h1>
-                    <ul class="season">
-                        <li class="active"><a href="#">第三季</a></li>
-                        <li><a href="#">第二季</a></li>
-                        <li><a href="#">第一季</a></li>
-                    </ul>
-                </div>
-                <ul class="video">
-                    <li>
-                        <div class="humbnail">
-                            <div class="gif" style="background-image: url(gif/5.gif)"></div>
-                            <div class="play">
-                                <div class="icon"></div>
-                                <div class="duration">14:25</div>
-                            </div>
-                        </div>
-                        <div class="meta">
-                            <div class="title">第三季 第12集</div>
-                            <div class="info">
-                                <span class="publish_date">2017.04.27</span>
-                                <span class="count">100万次播放</span>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="humbnail">
-                            <div class="gif" style="background-image: url(gif/6.gif)"></div>
-                            <div class="play">
-                                <div class="icon"></div>
-                                <div class="duration">14:25</div>
-                            </div>
-                        </div>
-                        <div class="meta">
-                            <div class="title">第三季 第11集</div>
-                            <div class="info">
-                                <span class="publish_date">2017.04.27</span>
-                                <span class="count">100万次播放</span>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="humbnail">
-                            <div class="gif" style="background-image: url(gif/14.gif)"></div>
-                            <div class="play">
-                                <div class="icon"></div>
-                                <div class="duration">14:25</div>
-                            </div>
-                        </div>
-                        <div class="meta">
-                            <div class="title">第三季 第10集</div>
-                            <div class="info">
-                                <span class="publish_date">2017.04.27</span>
-                                <span class="count">100万次播放</span>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="humbnail">
-                            <div class="gif" style="background-image: url(gif/8.gif)"></div>
-                            <div class="play">
-                                <div class="icon"></div>
-                                <div class="duration">14:25</div>
-                            </div>
-                        </div>
-                        <div class="meta">
-                            <div class="title">第三季 第9集</div>
-                            <div class="info">
-                                <span class="publish_date">2017.04.27</span>
-                                <span class="count">100万次播放</span>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="video_list">
-                <div class="head">
-                    <h1>奇葩吐槽</h1>
-                    <ul class="season">
-                        <li class="active"><a href="#">第三季</a></li>
-                        <li><a href="#">第二季</a></li>
-                        <li><a href="#">第一季</a></li>
-                    </ul>
-                </div>
-                <ul class="video">
-                    <li>
-                        <div class="humbnail">
-                            <div class="gif" style="background-image: url(gif/9.gif)"></div>
-                            <div class="play">
-                                <div class="icon"></div>
-                                <div class="duration">14:25</div>
-                            </div>
-                        </div>
-                        <div class="meta">
-                            <div class="title">第三季 第12集</div>
-                            <div class="info">
-                                <span class="publish_date">2017.04.27</span>
-                                <span class="count">100万次播放</span>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="humbnail">
-                            <div class="gif" style="background-image: url(gif/10.gif)"></div>
-                            <div class="play">
-                                <div class="icon"></div>
-                                <div class="duration">14:25</div>
-                            </div>
-                        </div>
-                        <div class="meta">
-                            <div class="title">第三季 第11集</div>
-                            <div class="info">
-                                <span class="publish_date">2017.04.27</span>
-                                <span class="count">100万次播放</span>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="humbnail">
-                            <div class="gif" style="background-image: url(gif/11.gif)"></div>
-                            <div class="play">
-                                <div class="icon"></div>
-                                <div class="duration">14:25</div>
-                            </div>
-                        </div>
-                        <div class="meta">
-                            <div class="title">第三季 第10集</div>
-                            <div class="info">
-                                <span class="publish_date">2017.04.27</span>
-                                <span class="count">100万次播放</span>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="humbnail">
-                            <div class="gif" style="background-image: url(gif/12.gif)"></div>
+                        <div class="thumbnail">
+                            <img src="thumbnail.png" alt="thumbnail" width="255" height="158">
+                            <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
                                 <div class="duration">14:25</div>
