--- a/more.html
+++ b/more.html
@@ -28,9 +28,6 @@
 </div>
 <main>
     <div class="inner">
-        <div class="banner">
-
-        </div>
         <div class="video">
             <div class="video_list">
                 <div class="head">
@@ -40,7 +37,6 @@
                         <li><a href="#">第二季</a></li>
                         <li><a href="#">第一季</a></li>
                     </ul>
-                    <a href="more.html" class="more">更多</a>
                 </div>
                 <ul class="video">
                     <li>
@@ -111,22 +107,9 @@
                             </div>
                         </div>
                     </li>
-                </ul>
-            </div>
-            <div class="video_list">
-                <div class="head">
-                    <h1>奇葩古丽</h1>
-                    <ul class="season">
-                        <li class="active"><a href="#">第三季</a></li>
-                        <li><a href="#">第二季</a></li>
-                        <li><a href="#">第一季</a></li>
-                    </ul>
-                    <a href="more.html" class="more">更多</a>
-                </div>
-                <ul class="video">
                     <li>
                         <div class="thumbnail">
-                            <img src="thumbnail.png" alt="thumbnail" width="255" height="158">
+                            <img src="thumbnail2.png" alt="thumbnail" width="255" height="158">
                             <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
@@ -192,22 +175,9 @@
                             </div>
                         </div>
                     </li>
-                </ul>
-            </div>
-            <div class="video_list">
-                <div class="head">
-                    <h1>奇葩吐槽</h1>
-                    <ul class="season">
-                        <li class="active"><a href="#">第三季</a></li>
-                        <li><a href="#">第二季</a></li>
-                        <li><a href="#">第一季</a></li>
-                    </ul>
-                    <a href="more.html" class="more">更多</a>
-                </div>
-                <ul class="video">
                     <li>
                         <div class="thumbnail">
-                            <img src="thumbnail.png" alt="thumbnail" width="255" height="158">
+                            <img src="thumbnail2.png" alt="thumbnail" width="255" height="158">
                             <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
