--- a/more.html
+++ b/more.html
@@ -18,7 +18,7 @@
 <nav>
     <div class="inner">
         <ul>
-            <li class="active"><a href="#">视频</a></li>
+            <li><a href="#">视频</a></li>
             <li><a href="#">文章</a></li>
             <li><a href="#">我们</a></li>
         </ul>
