--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <li>
                         <div class="thumbnail">
                             <img src="thumbnail2.png" alt="thumbnail" width="255" height="158">
+                            <div class="new">最新</div>
                             <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
