--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
                     <a href="more.html" class="more">更多</a>
                 </div>
                 <ul class="video">
-                    <li>
+                    <li class="new">
                         <div class="thumbnail">
                             <img src="thumbnail2.png" alt="thumbnail" width="255" height="158">
-                            <div class="new">最新</div>
                             <div class="live"></div>
                             <div class="play">
                                 <div class="icon"></div>
