--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                     <li class="new">
                         <a href="play.html">
                             <div class="thumbnail">
+                                <video width="255" height="158" autoplay loop muted>
+                                    <source src="anar.mp4" type="video/mp4">
+                                </video>
                                 <img src="thumbnail2.png" alt="thumbnail" width="255" height="158">
                                 <div class="live"></div>
                                 <div class="play">
