--- a/play.html
+++ b/play.html
@@ -172,7 +172,14 @@
             <ul class="info">
                 <li class="play">100万次播放</li>
                 <li class="comment">10万条</li>
-                <li class="like">2589756</li>
+                <li class="like">
+                    <div class="heart">
+                        <input type="checkbox" id="like_check">
+                        <div class="icon"></div>
+                        <div class="circles"></div>
+                    </div>
+                    <label for="like_check">2589756</label>
+                </li>
             </ul>
             <div class="share">分享
                 <ul>
