--- a/play.html
+++ b/play.html
@@ -30,7 +30,9 @@
     <div class="inner">
         <h1 class="video_title"><span class="brand">【石榴熟了】</span><span class="season">第三季</span>第一集</h1>
         <div class="video_area">
-            <div class="player"></div>
+            <div class="player">
+                <iframe height=540 width=820 src='http://player.youku.com/embed/XMjU5MjYwNTY5Ng==' frameborder=0 'allowfullscreen'></iframe>
+            </div>
             <div class="season_list">
                 <ul>
                     <li class="live">
