--- a/play.html
+++ b/play.html
@@ -31,7 +31,7 @@
         <h1 class="video_title"><span class="brand">【石榴熟了】</span><span class="season">第三季</span>第一集</h1>
         <div class="video_area">
             <div class="player">
-                <iframe height=540 width=820 src='http://player.youku.com/embed/XMjU5MjYwNTY5Ng==' frameborder=0 'allowfullscreen'></iframe>
+                <iframe height=540 width=820 src='https://player.youku.com/embed/XMjU5MjYwNTY5Ng==' frameborder=0 'allowfullscreen'></iframe>
             </div>
             <div class="season_list">
                 <ul>
